package controller;

import java.util.ArrayList;

import controller.interfaces.Descontable;
import datos.Descuento;

public class ADDescuento extends MasterConnection implements Descontable{

    @Override
    public void crearDescuento() {
        // TODO Auto-generated method stub
        
    }

    @Override
    public void borrarDescuento() {
        // TODO Auto-generated method stub
        
    }

    @Override
    public void modificarDescuento() {
        // TODO Auto-generated method stub
        
    }

    @Override
    public ArrayList<Descuento> listarDescuentos() {
        // TODO Auto-generated method stub
        return null;
    }
    
}
