package controller;

import java.util.ArrayList;

import controller.interfaces.Establecimientable;
import datos.Establecimiento;

public class ADEstablecimiento extends MasterConnection implements Establecimientable {

    @Override
    public void crearEstablecimiento() {
        // TODO Auto-generated method stub
        
    }

    @Override
    public void borrarEstablecimiento() {
        // TODO Auto-generated method stub
        
    }

    @Override
    public void modificarEstablecimiento() {
        // TODO Auto-generated method stub
        
    }

    @Override
    public ArrayList<Establecimiento> listarEstablecimientos() {
        // TODO Auto-generated method stub
        return null;
    }
    
}
