package controller;

import java.util.ArrayList;

import controller.interfaces.Menuable;
import datos.Menu;

public class ADMenu extends MasterConnection implements Menuable {

    @Override
    public void crearMenu() {
        // TODO Auto-generated method stub

    }

    @Override
    public void borrarMenu() {
        // TODO Auto-generated method stub
        
    }

    @Override
    public void modificarMenu() {
        // TODO Auto-generated method stub
        
    }

    @Override
    public Menu buscarMenu() {
        // TODO Auto-generated method stub
        return null;
    }

    @Override
    public ArrayList<Menu> listarMenu() {
        // TODO Auto-generated method stub
        return null;
    }
    
}
