package controller;

import java.time.LocalDate;
import java.util.ArrayList;

import controller.interfaces.Pedible;
import datos.Pedido;

public class ADPedido extends MasterConnection implements Pedible {

    @Override
    public void crearPedido() {
        // TODO Auto-generated method stub
        
    }

    @Override
    public void borrarPedido() {
        // TODO Auto-generated method stub
        
    }

    @Override
    public void modificarPedido() {
        // TODO Auto-generated method stub
        
    }

    @Override
    public Pedido buscarPedido() {
        // TODO Auto-generated method stub
        return null;
    }

    @Override
    public ArrayList<Pedido> listarPedidos() {
        // TODO Auto-generated method stub
        return null;
    }

    @Override
    public ArrayList<Pedido> listarPedidos(LocalDate pFecha) {
        // TODO Auto-generated method stub
        return null;
    }
    
}
