package controller;

import java.util.ArrayList;
import controller.interfaces.Productable;
import datos.Producto;

public class ADProducto extends MasterConnection implements Productable {

    @Override
    public void crearProducto() {
        // TODO Auto-generated method stub
        
    }

    @Override
    public void borrarProducto() {
        // TODO Auto-generated method stub
        
    }

    @Override
    public void modificarProducto() {
        // TODO Auto-generated method stub
        
    }

    @Override
    public Producto buscarProducto(String pCodPrd) {
        // TODO Auto-generated method stub
        return null;
    }

    @Override
    public ArrayList<Producto> listarProducto() {
        // TODO Auto-generated method stub
        return null;
    }

    @Override
    public ArrayList<Producto> listarProducto(String pTipo) {
        // TODO Auto-generated method stub
        return null;
    }
    
}
