package controller;

import controller.interfaces.Usuariable;

public class ADUsuarie extends MasterConnection implements Usuariable {

    @Override
    public void crearUsuario() {
        // TODO Auto-generated method stub
        
    }

    @Override
    public void borrarUsuario() {
        // TODO Auto-generated method stub
        
    }

    @Override
    public void modificarUsuario() {
        // TODO Auto-generated method stub
        
    }

    @Override
    public void listarUsuarios() {
        // TODO Auto-generated method stub
        
    }
    
}
