package controller.interfaces;

public interface Usuariable {
    public void crearUsuario();
    public void borrarUsuario();
    public void modificarUsuario();
    public void listarUsuarios(); // util para administrador.
}
