@startuml

left to right direction

skinparam linetype ortho

package "Model" {
	class Usuarie {
	}
	class Cliente {
	}
	class Administrador {
	}
	class Auxiliar {
	}
	class Repartidor {
	}
	class Pedido {
	}
	class Producto {
	}
	class Menu {
	}
	class Descuento {
	}
	class Establecimiento {
	}
}

package "View" {
	class vLogin
	class vMenuCliente
	class vMenuTrabajador
	class vPedidor
	class vConsultarPedidos
	class vModificarDatos
}

package "Controller" {
	class ConexionBD

	class ADUsuarie 
	class ADProducto 
	class ADPedido 
	class ADMenu
	class ADDescuento 
	class ADEstablecimiento 

	package "Interfaces" {
		interface Usuariable {
			login()
			modificarDatos()
			findUsuarie()
			listarUsuaries()
		}
		interface Descontable {
			addDescuento()
			modDescuento()
			rmDescuento()
			findDescuento()
			listarDescuentos()
		}
		interface Pedible {
			addPedido()
			modPedido()
			findPedido()
			listarPedidos()
		}
		interface Establecimientable {
			addEstableciemiento()
			modEstableciemiento()
			rmEstableciemiento()
			findEstablecimiento()
			listarEstablecimientos()
		}
		interface Menuable {
			addMenu()
			rmMenu()
			findMenu()
			listarMenus()
		}
		interface Productable {
			addProducto()
			modProducto()
			rmProducto()
			findProducto()
			listarProductos()
		}
	}

	package "Factorias" {
		class UsuarieADFactory {
			getUsuarie()
		}
		class ProductoADFactory {
			getProducto()
		}
		class PedidoADFactory {
			getPedido()
		}
		class MenuADFactory {
			getMenu()
		}
		class DescuentoADFactory {
			getDescuento()
		}
		class EstablecimientoADFactory {
			getEstablecimiento()
		}
	}
}

package "MySql" {
		class Usuarie {
		}
		class Pedido {
		}
		class Producto {
		}
		class Menu {
		}
		class Descuento {
		}
		class Establecimiento {
		}
}

ADUsuarie ..> Usuariable
ADProducto ..> Productable
ADPedido ..> Pedible
ADMenu ..> Menuable
ADDescuento ..> Descontable
ADEstablecimiento ..> Establecimientable

Usuariable -- UsuarieADFactory
Productable -- ProductoADFactory
Pedible -- PedidoADFactory
Menuable -- MenuADFactory
Descontable -- DescuentoADFactory
Establecimientable -- EstablecimientoADFactory

@enduml